# torch_AI

./: main.py  pyproject.toml
chapters/ch1/: 01_torch_intro.py
chapters/ch2/: 01_cv_intro.py  02_cv_intro.py
chapters/ch3/: 01_advanced_cv.py
