[project]
name = "torch-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]

cu130 = [
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu130" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]

torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]